--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,6 +1,11 @@
 <div class="field">
-    <label>{{label}}</label>
-    <input [type]="inputType" [formControl]="control" />
+
+    <label>{{ label }}</label>
+
+    <input *ngIf="controlType === 'input'" [type]="inputType" [formControl]="control" />
+
+    <textarea *ngIf="controlType === 'textarea'" [formControl]="control"></textarea>
+
     <div *ngIf="showErrors()" class="ui pointing red basic label">
         <p *ngIf="control.errors.required">
             Value is required
@@ -21,6 +26,9 @@
         </p>
         <p *ngIf="control.errors.noConnection">
             Please check you username
+        </p>
+        <p *ngIf="control.errors.email">
+            Enter a valid Email
         </p>
     </div>
 </div>
